<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".act_detalle_receta">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingTop="30dp"
        android:paddingRight="25dp"
        android:paddingBottom="30dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/tituloPagina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="25sp"
            android:weightSum="100">

            <TextView
                android:id="@+id/txt_nombre_receta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:fontFamily="@font/poppins_bold"
                android:text="Pepinos con tajin"
                android:textColor="#191919"
                android:textSize="17sp" />

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="right"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_close" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/contenedorCategorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal"
                    android:weightSum="10" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="30dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:cardCornerRadius="30dp"
                            app:cardElevation="0dp">

                            <ImageView
                                android:id="@+id/img_fotografia"
                                android:layout_width="wrap_content"
                                android:layout_height="300dp"
                                android:scaleType="centerCrop" />

                        </androidx.cardview.widget.CardView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:background="@drawable/timer_background"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView16"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                android:layout_margin="7dp"
                                app:srcCompat="@drawable/ic_clock_regular" />

                            <TextView
                                android:id="@+id/lblTiempoPreparacion"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right|center_vertical"
                                android:layout_marginRight="7dp"
                                android:fontFamily="@font/poppins"
                                android:text="45 min"
                                android:textColor="#f5f5f5"
                                android:textSize="10dp" />

                        </LinearLayout>


                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="30dp">

                    <Button
                        android:id="@+id/btnPlanSemanal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/gris"
                        android:drawableRight="@drawable/ic_yellow_arrow_down"
                        android:fontFamily="@font/poppins_bold"
                        android:insetBottom="0dp"
                        android:text="@string/btn_expandir_plan_semanal"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="#F8B133"
                        app:cornerRadius="15dp" />

                    <LinearLayout
                        android:id="@+id/planSemanal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#EFEEED"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="100">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="50"
                                android:orientation="vertical"
                                android:paddingLeft="10dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5sp">

                                <CheckBox
                                    android:id="@+id/lunes"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/lunes" />

                                <CheckBox
                                    android:id="@+id/martes"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/martes" />

                                <CheckBox
                                    android:id="@+id/miercoles"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/miercoles" />

                                <CheckBox
                                    android:id="@+id/jueves"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/jueves" />

                                <CheckBox
                                    android:id="@+id/viernes"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/viernes" />

                                <CheckBox
                                    android:id="@+id/sabado"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/sabado" />

                                <CheckBox
                                    android:id="@+id/domingo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/domingo" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="50"
                                android:orientation="vertical"
                                android:paddingLeft="10dp"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp">

                                <CheckBox
                                    android:id="@+id/desayuno"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="Desayuno" />

                                <CheckBox
                                    android:id="@+id/merienda1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/tc_merienda1" />

                                <CheckBox
                                    android:id="@+id/almuerzo"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/tc_almuerzos" />

                                <CheckBox
                                    android:id="@+id/merienda2"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/tc_merienda2" />

                                <CheckBox
                                    android:id="@+id/cena"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/tc_cenas" />

                                <CheckBox
                                    android:id="@+id/merienda3"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:buttonTint="#F9B334"
                                    android:text="@string/tc_merienda3" />

                                <Button
                                    android:id="@+id/btnAgregarPlanSemanal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:textAllCaps="false"
                                    app:cornerRadius="30dp"
                                    android:text="@string/btn_aniadir_a_plan_semanal"/>

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="30dp">

                    <TextView
                        android:id="@+id/textView49"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/lbl_ingredientes"
                        android:textColor="#191919"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:id="@+id/listaIngrediente"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="100"
                        android:orientation="vertical"></LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="30dp">

                    <TextView
                        android:id="@+id/textView49"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="100"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/lbl_preparacion"
                        android:textColor="#191919"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:id="@+id/listaPasos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="100"
                        android:orientation="vertical"></LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>